@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package io.spring.initializr.generator.buildsystem.maven;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -54,9 +53,9 @@ public class MavenDeveloper {
 		this.url = builder.url;
 		this.organization = builder.organization;
 		this.organizationUrl = builder.organizationUrl;
-		this.roles = Collections.unmodifiableList(new ArrayList<>(builder.roles));
+		this.roles = List.copyOf(builder.roles);
 		this.timezone = builder.timezone;
-		this.properties = Collections.unmodifiableMap(new LinkedHashMap<>(builder.properties));
+		this.properties = Map.copyOf(new LinkedHashMap<>(builder.properties));
 	}
 
 	/**
